# sql-llm

./: .gitignore  .gitmodules  DUCKDB_RESULTS.md  NOTES.md  README.md  agents.md  analyze.py  analyze_forgetting.py  autoresearch.py  circuit_trace.py  demo.py  llm_server.py  main.py  method.py  model.py  prepare.py  profile_training.py  program.md  pyproject.toml  research_harness.py  results.tsv  run_large_scale.py  sae.py  test_adversarial.py  test_complex_queries.py  test_duckdb.py  test_duckdb_suite.py  test_fast.py  test_kaggle_duckdb.py  test_kaggle_e2e.py  weights.py
datasets/: historical.json  random.json  semantic.json
docs/: catastrophic_forgetting.md  duckdb_tests.md  llm_interaction_logging.md
ext/: CMakeLists.txt  build.sh  extension_config.cmake
ext/src/: sql_llm_extension.cpp
ext/src/include/: sql_llm_extension.hpp
